Add Mapbox JS & stylesheet

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-mapbox-demo.css">
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
 
     {{content-for 'head-footer'}}
   </head>
@@ -19,6 +20,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-mapbox-demo.js"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.js'></script>
 
     {{content-for 'body-footer'}}
   </body>
